Include tests in MANIFEST.in and update ChangeLog

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,5 @@ include README.rst
 include LICENSE
 include MANIFEST.in
 include setup.py
+include tests/runTests.py
+recursive-include tests/QueryableListTests *.py
