Fix MANIFEST.in to include ChangeLog properly and also include the unit tests

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 recursive-include doc *.html
 recursive-include QueryableList *.py
-include Changelog
+include tests/runTests.py
+recursive-include tests/QueryableListTests *.py
+include ChangeLog
 include example.py
 include README.md
 include README.rst
